# sockets

./: CMakeLists.txt  build.sh  listener.c  local_c.c  server.c  server.h
fds_array/include/: fds_array.h
fds_array/src/: fds_array.c
queue/include/: queue.h
queue/src/: queue.c
server/include/: chat.h  complex.h  server.h
server/src/: chat.c  complex.c  server.c
